added notes on OOP concepts

--- a/.project
+++ b/.project
@@ -16,6 +16,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>Notes/OOP_Principles_and_SOLID.md</name>
+			<type>1</type>
+			<location>C:/Users/HP/Downloads/OOP_Principles_and_SOLID.md</location>
+		</link>
+		<link>
 			<name>UML/Employee.svg</name>
 			<type>1</type>
 			<location>D:/Kouser/Notes/Employee.svg</location>
